--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+    body{display:block;}
         div{display:block;
             margin:auto;
             width:350px;
@@ -35,37 +36,51 @@
 </head>
 <body>
  <div>
-    <script type="text/javascript">
-        atOptions = {
-         'key' : 'a596e3d2b4c5bde3a6c954344fe9a15d',
-         'format' : 'iframe',
-         'height' : 50,
-         'width' : 320,
-         'params' : {}
-        };
-       </script>
-       <script type="text/javascript" src="//www.highperformanceformat.com/a596e3d2b4c5bde3a6c954344fe9a15d/invoke.js"></script>   
- <img loading="lazy" style="width:300px; height: fit-content;"src="image.jpg">
+     <script>
+    window.onload = function() {
+      document.body.style.display = 'block'; // Show the page after loading
+    };
+  </script>
+     <script type="text/javascript">
+	atOptions = {
+		'key' : 'a596e3d2b4c5bde3a6c954344fe9a15d',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/a596e3d2b4c5bde3a6c954344fe9a15d/invoke.js"></script>
+    <img loading="lazy" style="width:300px; height: fit-content;"
+     src="moana2.jpg">
  </br>
-  <span style="display: block; text-align: center;font-weight: bolder;font-size: large;background-color: rgb(241, 140, 103);"> Spellbound Movie</span>
+  <span style="display: block; text-align: center;font-weight: bolder;font-size: large;background-color: rgb(241, 140, 103);">
+MOANA2 MOVIE</span>
 </br>
 <iframe loading="eager" src="https://moviehub24.github.io/ads/" scrolling="no" width="350px" height="300px" ></iframe>
 </br>
 <span style="color:rgb(4, 45, 65);display:block;text-align: center;font-weight: bold; background-color:rgb(147, 233, 190);">Movie Info:-</span> 
 <pre>
 IMDB Rating:-8.0/10
-Movie name:MOANA 2
-RElease Year:
+Movie:-
 Language:Hindi+English 
 Quality:-480p||720p||1080p
 Format:Mkv
+  </br>
 </pre>
-
+</br>
 <iframe loading="eager" src="https://moviehub24.github.io/ads/" scrolling="no" width="350px" height="300px" ></iframe>
-<h4 style="color:rgb(4, 45, 65);display:block;text-align: center;font-weight: bold; background-color:rgb(147, 233, 190);">Movie synopsis</h4>
+<h4 style="color:rgb(4, 45, 65);display:block;text-align: center;font-weight: bold; background-color:rgb(147, 233, 190);">STEPS TO DOWNLOAD</h4>
 <p>
-    Moana 2, released in 2024, follows Moana three years after the events of the first film. After receiving a vision from her ancestor Tautai Vasa, Moana embarks on a journey to the far seas of Oceania to find the lost island of Motufetu and break its curse. She assembles a crew including Loto, Moni, Keke, and her pig Pua and rooster Heihei. Along the way, they face challenges from storm god Nalo and his enforcer Matangi. Moana and her crew eventually succeed in their quest, with Moana gaining a wayfinder’s tattoo and Maui regaining his godhood. The film grossed $963.5 million worldwide and received mixed reviews, with a rating of 61% on Rotten Tomatoes.
-    
+<ol>
+  <li>CLICK ON any button 480p/720p/1080p</li>
+  <li>THEN CLICK ON DOWNLOAD</li>
+  <li>NOW YOU OPEN IN TELEGRAM BOT</li>
+    <li>FIRST JOIN "CHANNEL 1"</li>
+    <li>Strat BOT</li>
+    <li>BOT SEND YOU YOUR MOVIE</li>
+    <li>DOWNLOAD YOUR MOVIE</li>
+</ol>
 </p>
 
 <iframe loading="eager" src="https://moviehub24.github.io/ads/" scrolling="no" width="350px" height="300px" ></iframe>
@@ -89,11 +104,8 @@ Format:Mkv
 </br>
 <iframe loading="eager" src="https://moviehub24.github.io/ads/" scrolling="no" width="350px" height="300px" ></iframe>
 </br>
-<video style="display: block;margin: auto;" height="200px" width="350px"controls>
-    <source src="how.mp4" type="video/mp4">
-    <sorce src="how.ogg" type="videp/ogg">
-    your broswer doesn't support video.
-</video>
+<iframe loading="eager" src="https://moviehub24.github.io/video/" scrolling="no" width="350px" height="200px" ></iframe>
+
 </div>
 </body>
 </html>
